WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212849
AX: aria-modal nodes wrapped in aria-hidden are not honored
https://bugs.webkit.org/show_bug.cgi?id=212849
Summary
AX: aria-modal nodes wrapped in aria-hidden are not honored
chris fleizach
Reported
2020-06-05 15:14:57 PDT
Created
attachment 401207
[details]
problem We determined that the div[role=“dialog”, aria-modal=“true”] in question is wrapped by div[aria-hidden=“true”]. Bc of this wrapper, the div[role=“dialog”, aria-modal=“true”] should be ignored.
Attachments
problem
(962 bytes, text/html)
2020-06-05 15:14 PDT
,
chris fleizach
no flags
Details
patch
(26.42 KB, patch)
2020-06-18 11:44 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(26.15 KB, patch)
2020-06-18 11:45 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(25.76 KB, patch)
2020-06-18 11:48 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(25.83 KB, patch)
2020-06-18 13:32 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-05 15:15:08 PDT
<
rdar://problem/64047019
>
chris fleizach
Comment 2
2020-06-05 15:15:15 PDT
<
rdar://problem/63985730
>
chris fleizach
Comment 3
2020-06-18 11:44:19 PDT
Created
attachment 402217
[details]
patch
chris fleizach
Comment 4
2020-06-18 11:45:00 PDT
Created
attachment 402218
[details]
patch
chris fleizach
Comment 5
2020-06-18 11:48:44 PDT
Created
attachment 402219
[details]
patch
chris fleizach
Comment 6
2020-06-18 13:32:53 PDT
Created
attachment 402233
[details]
patch
EWS
Comment 7
2020-06-29 11:54:24 PDT
Committed
r263673
: <
https://trac.webkit.org/changeset/263673
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402233
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug